--- a/src/components/start-page/start-page.styles.scss
+++ b/src/components/start-page/start-page.styles.scss
@@ -1,5 +1,5 @@
 .start-page-outer {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -92,6 +92,7 @@
     align-items: center;
     width: 100%;
     max-width: 795px;
+    padding: 106px 0 43px 0;
     &__title {
         text-align: center;
         font-family: 'Poppins', sans-serif;
@@ -114,7 +115,241 @@
         margin-bottom: 40px;
     }
     img {
-        //width: 795px;
-        //height: 460px;
+        width: 800px;
+        height: 524px;
+    }
+}
+
+@media screen and (max-height: 940px) {
+    .start-page-container {
+        padding: 60px 0 43px 0;
+        img {
+            width: 740px;
+            height: 464px;
+        }
+    }
+}
+
+@media screen and (max-height: 840px) {
+    .start-page-container {
+        padding: 43px 0;
+        &__title {
+            font-size: 32px;
+            line-height: 50px;
+        }
+        img {
+            width: 670px;
+            height: 394px;
+        }
+    }
+}
+
+@media screen and (max-width: 920px) {
+    .orange-circle {
+        top: 5%;
+    }
+    .red-circle {
+        top: 90%;
+    }
+    .violet-circle {
+        top: 88%;
+    }
+    .yellow-circle {
+        top: 8%;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .dark-blue-circle {
+        top: 85%;
+        left: 20%;
+    }
+    .start-page-container {
+        padding: 43px;
+        img {
+            width: 670px;
+            height: 474px;
+        }
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .orange-circle {
+        top: 40px;
+    }
+    .red-circle {
+        display: none;
+    }
+    .start-page-container {
+        padding: 30px;
+        &__title {
+            font-size: 32px;
+            line-height: 50px;
+            //margin-bottom: 26px;
+        }
+        &__subtitle {
+            font-size: 16px;
+            line-height: 25px;
+        }
+        img {
+            width: 630px;
+            height: 424px;
+        }
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .start-page-container {
+        padding: 30px;
+        &__title {
+            font-size: 28px;
+            line-height: 40px;
+            margin-bottom: 20px;
+        }
+        &__subtitle {
+            font-size: 14px;
+            line-height: 22px;
+            margin-bottom: 20px;
+        }
+        .button {
+            font-size: 16px;
+            padding: 0 16px;
+            height: 38px;
+        }
+        img {
+            width: 560px;
+            height: 380px;
+        }
+    }
+}
+
+@media screen and (max-width: 580px) {
+    .start-page-container {
+        img {
+            width: 480px;
+            height: 360px;
+        }
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .start-page-container {
+        padding: 0 20px;
+        &__title {
+            font-size: 24px;
+            line-height: 34px;
+            margin-bottom: 18px;
+        }
+        &__subtitle {
+            font-size: 13px;
+            line-height: 22px;
+            margin-bottom: 20px;
+        }
+        .button {
+            font-size: 15px;
+            padding: 0 16px;
+            height: 36px;
+        }
+        img {
+            width: 420px;
+            height: 320px;
+        }
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .blue-circle {
+        display: none;
+    }
+    .aqua-circle {
+        display: none;
+    }
+    .violet-circle {
+        left: 30px;
+    }
+    .dark-blue-circle {
+        right: 30px;
+        top: 140px;
+    }
+    .green-circle {
+        top: 10%;
+    }
+    .start-page-container {
+        padding: 0 20px;
+        &__title {
+            font-size: 22px;
+            line-height: 34px;
+            margin-bottom: 18px;
+        }
+        &__subtitle {
+            font-size: 13px;
+            line-height: 22px;
+            margin-bottom: 20px;
+        }
+        .button {
+            font-size: 15px;
+            padding: 0 16px;
+            height: 36px;
+        }
+        img {
+            width: 380px;
+            height: 280px;
+        }
+    }
+}
+
+@media screen and (max-width: 390px) {
+    .blue-circle {
+        display: block;
+        top: 80%;
+        left: 30%;
+    }
+    .red-circle {
+        display: block;
+        top: 65%;
+        left: 20%;
+        width: 34px !important;
+        height: 34px !important;
+    }
+    .violet-circle {
+        top: 25%;
+        left: 40%
+    }
+    .yellow-circle {
+        top: 70%;
+    }
+    .orange-circle {
+        width: 40px !important;
+        height: 40px !important;
+    }
+    .green-circle {
+        top: 15%;
+    }
+    .aqua-circle {
+        top: 90%;
+        display: block;
+        width: 20px !important;
+        height: 20px !important;
+    }
+    .start-page-container {
+        padding: 0 10px;
+        &__title {
+            font-size: 18px;
+            line-height: 26px;
+            margin-bottom: 16px;
+        }
+        &__subtitle {
+            font-size: 12px;
+            line-height: 22px;
+            margin-bottom: 16px;
+        }
+        .button {
+            font-size: 13px;
+            padding: 0 12px;
+            height: 32px;
+        }
+        img {
+            display: none;
+        }
     }
 }
