--- a/src/components/6mins-walking/six-min-walking.scss
+++ b/src/components/6mins-walking/six-min-walking.scss
@@ -1,7 +1,7 @@
 .walking_outer {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
 }
 
@@ -14,7 +14,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 44px 64px 33px 82px;
+        padding: 44px 64px 33px 51px;
         &-left {
             max-width: 682px;
             margin-right: 20px;
@@ -69,15 +69,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 100%;
     &_container {
         padding: 22px 54px 22px 51px;
         display: flex;
         flex-direction: column;
         &_distance {
             display: flex;
-            input {
-                border-radius: 10px;
-            }
             .ant-form-item-required {
                 font-family: 'Poppins', sans-serif;
                 font-weight: 400;
@@ -97,6 +95,20 @@
                 width: 64px;
                 height: 40px;
             }
+            &--input {
+                border-radius: 10px;
+                border: 1px solid rgba(203, 203, 203, 1);
+                color: #292A2E;
+                font-size: 14px;
+                &:focus {
+                    box-shadow: none;
+                    border-color: rgba(123, 92, 250, 1) !important;
+                }
+                &:hover {
+                    box-shadow: none;
+                    border-color: rgba(123, 92, 250, 1) !important;
+                }
+            }
         }
         &_tables {
             display: flex;
@@ -115,6 +127,7 @@
                         padding-top: 22px;
                         padding-bottom: 22px;
                         outline: 0px solid transparent;
+                        text-align: center;
                         input {
                             border-radius: 10px;
                         }
@@ -138,20 +151,374 @@
     }
 }
 
+.borg_wrapper {
+    display: flex;
+    flex-direction: column;
+    //justify-content: space-between;
+}
+
 .borg_outer {
     background: rgba(123, 92, 250, 0.1);
     border: 1px solid #7B5CFA;
     border-radius: 10px;
     padding: 16px;
-    margin-bottom: 51.5px;
+    margin-bottom: 30px;
 }
 
-.finish-button {
+// .finish-button {
+//     background-color: rgba(253, 93, 118, 0.15);
+//     border: 1px solid rgba(253, 93, 118, 1);
+//     color: rgba(253, 93, 118, 1);
+//     &:hover {
+//         background-color: rgba(253, 93, 118, 0.8);
+//         color: white;
+//     }
+// }
+.finish-table-button {
     background-color: rgba(253, 93, 118, 0.15);
     border: 1px solid rgba(253, 93, 118, 1);
     color: rgba(253, 93, 118, 1);
     &:hover {
         background-color: rgba(253, 93, 118, 0.8);
         color: white;
+    }
+    margin-top: 20px;
+}
+
+@media screen and (max-height: 900px) {
+    .borg_outer {
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-height: 800px) {
+    .borg_outer {
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 1220px) {
+    .walking_outer .walking_top .walking_top_container {
+        padding: 44px 40px 33px 40px;
+    }
+    .walking_outer .walking_bottom .walking_bottom_container {
+        padding: 22px 40px;
+    }
+    .walking_outer .walking_bottom .walking_bottom_container_tables--data table th,
+    .walking_bottom_container_tables--data table td {
+        min-width: 122px;
+    }
+    .borg_outer {
+        &--title {
+            font-size: 12px;
+        }
+        &--description {
+            font-size: 12px;
+        }
+        &-items {
+            font-size: 12px;
+        }
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .walking_outer .walking_top .walking_top_container .walking_top_container-left {
+        &--title {
+            font-size: 24px;
+            line-height: 38px;
+        }
+        &-items {
+            &-item {
+                img {
+                    width: 12px;
+                    height: 16px;
+                    margin-right: 12px;
+                }
+                div {
+                    font-size: 14px;
+                    line-height: 20px;
+                }
+            }
+        }
+    }
+    .walking_outer .walking_top .walking_top_container .walking_top_container-right {
+        img {
+            width: 420px;
+        }
+    }
+    .walking_outer .walking_bottom .walking_bottom_container .walking_bottom_container_distance {
+        .ant-form-item-required {
+            font-size: 14px;
+            line-height: 20px;
+            margin-right: 12px;
+        }
+    }
+    .walking_outer .walking_bottom .walking_bottom_container_tables--data table th,
+    .walking_bottom_container_tables--data table td {
+        min-width: 110px;
+        font-size: 11px;
+    }
+    .borg_outer {
+        &--title {
+            font-size: 12px;
+        }
+        &--description {
+            font-size: 12px;
+        }
+        &-items {
+            font-size: 12px;
+        }
+    }
+    .finish-table-button {
+        font-size: 14px;
+        padding: 0 16px;
+        height: 38px;
+    }
+}
+
+@media screen and (max-width: 1022px) {
+    .walking_outer .walking_top .walking_top_container .walking_top_container-left {
+        &--title {
+            font-size: 22px;
+            line-height: 36px;
+        }
+        &-items {
+            &-item {
+                img {
+                    width: 12px;
+                    height: 16px;
+                    margin-right: 12px;
+                }
+                div {
+                    font-size: 13px;
+                    line-height: 18px;
+                }
+                span {
+                    font-size: 10px;
+                    line-height: 16px;
+                    font-style: italic;
+                }
+            }
+        }
+    }
+    .walking_outer .walking_top .walking_top_container .walking_top_container-right {
+        img {
+            width: 390px;
+        }
+    }
+    .walking_outer .walking_bottom .walking_bottom_container_tables--data table th,
+    .walking_bottom_container_tables--data table td {
+        min-width: 100px;
+        font-size: 11px;
+    }
+    .borg_outer {
+        &--title {
+            font-size: 11px;
+        }
+        &--description {
+            font-size: 11px;
+        }
+        &-items {
+            font-size: 11px;
+        }
+    }
+}
+
+@media screen and (max-width: 920px) {
+    .walking_outer .walking_top .walking_top_container .walking_top_container-left {
+        &--title {
+            font-size: 20px;
+            line-height: 32px;
+        }
+        &-items {
+            &-item {
+                img {
+                    width: 10px;
+                    height: 14px;
+                    margin-right: 10px;
+                }
+                div {
+                    font-size: 12px;
+                    line-height: 17px;
+                }
+            }
+        }
+    }
+    .walking_outer .walking_top .walking_top_container .walking_top_container-right {
+        margin-bottom: 0;
+        img {
+            width: 350px;
+        }
+    }
+    .walking_outer .walking_bottom .walking_bottom_container_tables {
+        flex-direction: column-reverse;
+        width: 100%;
+        &--data {
+            width: 100%;
+            margin-right: 0;
+        }
+    }
+    .walking_outer .walking_bottom .walking_bottom_container_tables--data {
+        table {
+            margin-right: 0;
+        }
+    }
+    .walking_outer .walking_bottom .walking_bottom_container .walking_bottom_container_distance {
+        .ant-form-item {
+            &-label {
+                max-width: 76%;
+            }
+        }
+    }
+    .walking_outer .walking_bottom .walking_bottom_container_tables--data table th,
+    .walking_bottom_container_tables--data table td {
+        min-width: 100px;
+        max-width: 200px;
+        font-size: 11px;
+        padding-right: 8px;
+    }
+    .finish-table-button {
+        font-size: 14px;
+        padding: 0 16px;
+    }
+    .borg_outer {
+        margin-top: 10px;
+        margin-bottom: 20px;
+        &--title {
+            font-size: 11px;
+        }
+        &--description {
+            font-size: 11px;
+        }
+        &-items {
+            font-size: 11px;
+        }
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .walking_outer .walking_top .walking_top_container .walking_top_container-left {
+        &--title {
+            font-size: 18px;
+            line-height: 28px;
+        }
+        &-items {
+            &-item {
+                img {
+                    margin-right: 10px;
+                }
+                div {
+                    font-size: 11px;
+                    line-height: 17px;
+                }
+            }
+        }
+    }
+    .walking_outer .walking_top .walking_top_container .walking_top_container-right {
+        img {
+            width: 310px;
+        }
+    }
+    .finish-table-button {
+        font-size: 13px;
+        padding: 0 14px;
+        margin-top: 24px;
+        height: 36px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .walking_outer .walking_top .walking_top_container {
+        padding: 30px;
+    }
+    .walking_outer .walking_bottom .walking_bottom_container {
+        padding: 30px;
+    }
+    .walking_outer .walking_top .walking_top_container .walking_top_container-right {
+        display: none;
+    }
+    .walking_outer .walking_bottom .walking_bottom_container_tables--data table th,
+    .walking_bottom_container_tables--data table td {
+        min-width: 80px;
+        font-size: 10px;
+    }
+    .walking_outer .walking_bottom .walking_bottom_container .walking_bottom_container_distance {
+        .ant-form-item {
+            width: 100%;
+            display: flex;
+            &-control {
+                max-width: 64px;
+            }
+        }
+        .ant-form-item-required {
+            font-size: 11px;
+            line-height: 20px;
+            margin-right: 8px;
+        }
+    }
+}
+
+@media screen and (max-width: 560px) {
+    .walking_outer .walking_bottom .walking_bottom_container_tables--data table th,
+    .walking_bottom_container_tables--data table td {
+        min-width: 60px;
+        font-size: 10px;
+    }
+    .walking_outer .walking_bottom .walking_bottom_container .walking_bottom_container_distance {
+        .ant-form-item {
+            &-label {
+                max-width: 37%;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .walking_outer .walking_top .walking_top_container .walking_top_container-left {
+        &--title {
+            font-size: 16px;
+            line-height: 24px;
+        }
+        &-items {
+            &-item {
+                img {
+                    margin-right: 8px;
+                }
+                div {
+                    font-size: 10px;
+                    line-height: 14px;
+                }
+            }
+        }
+    }
+    .walking_outer .walking_bottom .walking_bottom_container_tables--data table th,
+    .walking_bottom_container_tables--data table td {
+        min-width: 30px;
+        font-size: 9px;
+        padding: 4px;
+    }
+    .walking_outer .walking_bottom .walking_bottom_container .walking_bottom_container_distance {
+        .ant-form-item {
+            &-label {
+                max-width: 43%;
+            }
+        }
+    }
+    .borg_outer {
+        &--title {
+            font-size: 10px;
+        }
+        &--description {
+            font-size: 10px;
+        }
+        &-items {
+            font-size: 10px;
+        }
+    }
+    .finish-table-button {
+        font-size: 11px;
+        padding: 0 12px;
+        margin-top: 24px;
+        height: 32px;
     }
 }
