--- a/src/components/health-form/health-form.scss
+++ b/src/components/health-form/health-form.scss
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     padding: 35px 87px 35px 144px;
+    height: 100vh;
 }
 
 .health-form-wrapper {
