--- a/src/components/steps/steps.styles.scss
+++ b/src/components/steps/steps.styles.scss
@@ -515,7 +515,7 @@
 
 @media screen and (max-width: 400px) {
     .technique_outer {
-        padding: 0 20px;
+        padding: 60px 20px 40px 20px;
         &_left {
             &--title {
                 font-size: 16px;
