--- a/src/components/summary/summary.scss
+++ b/src/components/summary/summary.scss
@@ -75,10 +75,13 @@
                     line-height: 22px;
                     color: #FFFFFF;
                     border-radius: 10px;
-                    min-width: 700px;
+                    min-width: 420px;
                     &-value_outer {
                         display: flex;
                         flex-direction: column;
+                    }
+                    &--description {
+                        display: none;
                     }
                 }
                 .pink {
@@ -142,7 +145,7 @@
         .zone {
             font-size: 13px;
             line-height: 18px;
-            min-width: 650px;
+            //min-width: 650px;
             padding: 2px 13px;
             height: 50px;
         }
@@ -182,7 +185,7 @@
         .zone {
             font-size: 13px;
             line-height: 18px;
-            min-width: 626px;
+            //min-width: 626px;
             padding: 2px 13px;
             height: 46px;
         }
@@ -228,7 +231,7 @@
         .zone {
             font-size: 12px;
             line-height: 18px;
-            min-width: 580px;
+            //min-width: 580px;
             padding: 2px 13px;
             height: 42px;
         }
@@ -256,7 +259,7 @@
         .zone {
             font-size: 12px;
             line-height: 18px;
-            min-width: 510px;
+            //min-width: 510px;
             padding: 2px 13px;
             height: 40px;
         }
@@ -268,7 +271,7 @@
         .zone {
             font-size: 12px;
             line-height: 18px;
-            min-width: 420px;
+            //min-width: 420px;
             padding: 2px 13px;
             height: 40px;
             &--description {
